# TDD

./: tdd.code-workspace
go/: go.mod  money_test.go
go/stocks/: bank.go  money.go  portfolio.go
js/: bank.js  portfolio.js  test_money.js
py_tdd/: pyproject.toml
py_tdd/py_tdd/: bank.py  money.py  portfolio.py
py_tdd/tests/: test_money.py
tdd_go/: money_test.go
